--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@rneui/themed": "^4.0.0-rc.7",
     "expo": "~48.0.5",
     "expo-status-bar": "~1.4.4",
+    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.71.3",
     "react-native-maps": "1.3.2",
